istio-components/networking/virtualservice/virtualservice-consumer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consumer-vs
  namespace: app
spec:
  hosts:
  - consumer
  http:
  - match:
    - uri:
        prefix: /

    route:
    - destination:
        host: consumer
        # host: consumer.app.svc.cluster.local # FQDN 
        # host: consumer.app
        # host: consumer
        subset: v1
      weight: 60

    - destination:
        host: consumer
        subset: v2
      weight: 30

    - destination:
        host: consumer
        subset: v3
      weight: 10
      
    timeout: 5s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
