istio-components/networking/virtualservice/virtualservice-producer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: producer-vs
  namespace: app
spec:
  hosts:
  - "*"

  gateways:
  - asm-gateway/producer-gateway
  
  http:
  - match:
    - uri:
        prefix: /

    route:
    - destination:
        port:
          number: 8000
        host: producer

    timeout: 5s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
